--- a/README
+++ b/README
@@ -29,7 +29,9 @@ Although this project was done in collaboration, I led most of the development:
 > 🔍 The Git commit history reflects the majority of my contributions.
 
 ## 📷 Screenshots
-
+![Screenshot](menu.png)
+![Screenshot](gameplay1.png)
+![Screenshot](gameplay2.png)
 
 ## 🚀 How to Run
 
