--- a/README
+++ b/README
@@ -29,9 +29,9 @@ Although this project was done in collaboration, I led most of the development:
 > 🔍 The Git commit history reflects the majority of my contributions.
 
 ## 📷 Screenshots
-![Screenshot](menu.png)
-![Screenshot](gameplay1.png)
-![Screenshot](gameplay2.png)
+![Menu](menu.png)
+![Gameplay 1](gameplay1.png)
+![Gameplay 2](gameplay2.png)
 
 ## 🚀 How to Run
 
